feat: terragrunt implementation for dev environment

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ inventory
 install-ansible.sh
 install-docker-ubuntu.sh
 ec2_hosts.txt
+*.terragrunt-*
+*.terraform.*
+*.terragrunt*
+*.terraform*
+terraform.tfvars
+
 
 # Django #
 *.log
